# tenet-folio

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INFORMATION_SECURITY_POLICY.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  TERMS_OF_SERVICE.md
backend/: .env.example  .env.test.example  config.py  database.py  logging_config.py  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/api/: __init__.py  accounts.py  asset_classes.py  config.py  dashboard.py  helpers.py  lots.py  market_data.py  plaid.py  portfolio.py  preferences.py  providers.py  reports.py  reports_config.py  schwab.py  securities.py  snaptrade.py  sync.py
backend/integrations/: __init__.py  coinbase_client.py  coinbase_market_data.py  coingecko_client.py  exceptions.py  ibkr_flex_client.py  market_data_protocol.py  parsing_utils.py  plaid_client.py  provider_protocol.py  provider_registry.py  schwab_client.py  simplefin_client.py  snaptrade_client.py  yahoo_finance_client.py
backend/models/: __init__.py  account.py  account_snapshot.py  activity.py  asset_class.py  daily_holding_value.py  holding.py  holding_lot.py  lot_disposal.py  plaid_item.py  provider_setting.py  report_sheet_target.py  security.py  sync_log.py  sync_session.py  user_preference.py  utils.py
backend/schemas/: __init__.py  account.py  lot.py  portfolio_returns.py  portfolio_valuation.py  preference.py  provider.py  report.py
backend/scripts/: backfill_securities.py  cleanup_zero_value_holdings.py  db_shell.py  debug_coinbase_market_data.py  (+21 more)
(+323 files in other folders)
